# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: check.yml  lint.yml  linter.yml  test.yml  tests.yml  unified-ci.yml
gendiff/: __init__.py  cli.py  diff.py  gendiff.py  json.py  parser.py  plain.py  render.py  utilities.py
gendiff/renderers/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/test_data/: file3.json
